--- a/package.json
+++ b/package.json
@@ -4,19 +4,28 @@
   "main": "dist/webpack-config.js",
   "repository": {},
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prebuild": "del-cli \"dist/**/*\"",
-    "build": "babel src --out-dir dist",
+    "build": "npm run transpile & npm run style",
+    "style": "postcss src/style/slide-deck.css --output dist/style/slide-deck.css",
+    "transpile": "babel src --out-dir dist",
     "test": "jest --no-watchman",
     "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
+    "autoprefixer": "~6.7.6",
     "babel-cli": "~6.23.0",
     "babel-jest": "~19.0.0",
     "babel-plugin-add-module-exports": "~0.2.1",
     "babel-preset-env": "~1.1.11",
+    "cssnano": "~3.10.0",
     "del-cli": "~0.2.1",
-    "jest": "~19.0.2"
+    "jest": "~19.0.2",
+    "postcss-cli": "~3.0.0-beta",
+    "postcss-simple-vars": "~3.0.0"
   },
   "dependencies": {
     "angular2-template-loader": "~0.6.2",
