fix: allow dirname to be passed in

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-config",
   "version": "1.0.0",
-  "main": "dist/webpack-config.js",
+  "main": "./dist/webpack-config.js",
   "repository": {},
   "license": "MIT",
   "files": [
