--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jest": "~19.0.2",
     "mkdirp": "~0.5.1",
     "node-sass": "~4.5.0",
-    "postcss-base64": "~0.6.1",
+    "postcss-assets": "~4.1.0",
     "postcss-cli": "~3.0.0-beta",
     "reveal.js": "~3.4.1"
   },
