--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sass": "node-sass src/style/slide-deck.scss > dist/style/slide-deck.css --include-path ./node_modules/reveal.js/css/theme/template",
     "prestyle": "npm run sass",
     "style": "postcss dist/style/slide-deck.css --output dist/style/slide-deck.css",
-    "transpile": "babel src --out-dir dist",
+    "transpile": "babel src --out-dir dist --copy-files",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
@@ -43,9 +43,11 @@
     "html-webpack-plugin": "~2.28.0",
     "lodash.flatten": "~4.4.0",
     "markdown-loader": "~2.0.0",
+    "postcss-loader": "~1.3.3",
     "pug": "~2.0.0-beta11",
     "pug-html-loader": "~1.1.1",
     "raw-loader": "~0.5.1",
+    "sass-loader": "~6.0.2",
     "style-loader": "~0.13.2",
     "to-string-loader": "~1.1.5",
     "typescript": "~2.2.1",
