--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
   ],
   "scripts": {
     "prebuild": "del-cli \"dist/**/*\"",
-    "build": "npm run transpile & npm run style",
-    "presass": "mkdirp dist/style",
-    "sass": "node-sass src/style/slide-deck.scss > dist/style/slide-deck.css --include-path ./node_modules/reveal.js/css/theme/template",
-    "prestyle": "npm run sass",
-    "style": "postcss dist/style/slide-deck.css --output dist/style/slide-deck.css",
-    "transpile": "babel src --out-dir dist --copy-files",
+    "build": "babel src --out-dir dist --copy-files",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
@@ -25,10 +20,7 @@
     "babel-preset-env": "~1.1.11",
     "del-cli": "~0.2.1",
     "jest": "~19.0.2",
-    "mkdirp": "~0.5.1",
-    "postcss-assets": "~4.1.0",
-    "postcss-cli": "~3.0.0-beta",
-    "reveal.js": "~3.4.1"
+    "mkdirp": "~0.5.1"
   },
   "dependencies": {
     "angular2-template-loader": "~0.6.2",
