--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-add-module-exports": "~0.2.1",
     "babel-preset-env": "~1.1.11",
     "del-cli": "~0.2.1",
+    "extract-text-webpack-plugin": "~2.0.0",
     "jest": "~19.0.2",
     "mkdirp": "~0.5.1"
   },
