--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "deep-assign": "~2.0.0",
     "extract-text-webpack-plugin": "~2.0.0",
     "file-loader": "~0.10.1",
+    "highlight.js": "~9.10.0",
     "html-loader": "~0.4.5",
     "html-webpack-plugin": "~2.28.0",
     "lodash.flatten": "~4.4.0",
