--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "object-partners-presentation",
-  "version": "1.0.0",
-  "main": "./dist/webpack-config.js",
-  "repository": {},
+  "name": "@objectpartners/presentation-config",
+  "version": "1.0.0-rc.0",
+  "main": "dist/webpack-config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/objectpartners/object-partners-presentation-config"
+  },
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "author": "Dustin Schau <dustin.schau@objectpartners.com> (https://objectpartners.com)",
   "scripts": {
-    "precommit": "npm run build && git add dist --all",
+    "precommit": "lint-staged",
     "prebuild": "del-cli \"dist/**/*\"",
     "build": "babel src --out-dir dist --copy-files",
+    "format": "prettier \"src/**/*.js\" --write --single-quote",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
   },
@@ -18,11 +20,13 @@
     "babel-cli": "~6.23.0",
     "babel-jest": "~19.0.0",
     "babel-plugin-add-module-exports": "~0.2.1",
-    "babel-preset-env": "~1.1.11",
+    "babel-preset-env": "^1.6.0",
     "del-cli": "~0.2.1",
-    "husky": "~0.13.3",
+    "husky": "^0.14.3",
     "jest": "~19.0.2",
-    "mkdirp": "~0.5.1"
+    "lint-staged": "^4.0.4",
+    "mkdirp": "~0.5.1",
+    "prettier": "^1.6.1"
   },
   "dependencies": {
     "angular2-template-loader": "~0.6.2",
@@ -41,7 +45,8 @@
     "node-sass": "~4.5.0",
     "postcss-loader": "~1.3.3",
     "pug": "~2.0.0-beta11",
-    "pug-html-loader": "~1.1.1",
+    "pug-html-loader": "^1.1.5",
+    "pug-loader": "^2.3.0",
     "raw-loader": "~0.5.1",
     "sass-loader": "~6.0.2",
     "style-loader": "~0.13.2",
@@ -49,5 +54,14 @@
     "typescript": "~2.2.1",
     "url-loader": "~0.5.8",
     "webpack": "~2.2.1"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "npm run format",
+      "git add"
+    ]
   }
 }
