--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@objectpartners/presentation-config",
-  "version": "1.0.0-rc.0",
-  "main": "dist/webpack-config.js",
+  "version": "1.0.0-rc.1",
+  "main": "webpack-config.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/objectpartners/object-partners-presentation-config"
@@ -12,6 +12,10 @@
     "precommit": "lint-staged",
     "prebuild": "del-cli \"dist/**/*\"",
     "build": "babel src --out-dir dist --copy-files",
+    "prebuild:publish": "npm run build && npm run copy",
+    "build:publish": "cd dist && npm publish",
+    "postbuild:publish": "cd ../",
+    "copy": "cp package.json dist/package.json",
     "format": "prettier \"src/**/*.js\" --write --single-quote",
     "test": "jest",
     "test:watch": "npm run test -- --watch"
@@ -46,7 +50,6 @@
     "postcss-loader": "~1.3.3",
     "pug": "~2.0.0-beta11",
     "pug-html-loader": "^1.1.5",
-    "pug-loader": "^2.3.0",
     "raw-loader": "~0.5.1",
     "sass-loader": "~6.0.2",
     "style-loader": "~0.13.2",
