--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@objectpartners/presentation-config",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "main": "webpack-config.js",
   "repository": {
     "type": "git",
@@ -36,10 +36,6 @@
     "angular2-template-loader": "~0.6.2",
     "autoprefixer": "~6.7.6",
     "awesome-typescript-loader": "~3.0.8",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "~0.26.2",
     "cssnano": "~3.10.0",
     "deep-assign": "~2.0.0",
